force-app/main/default/objects/Gift_Card__c/Gift_Card__c.object-meta.xml
<CustomObject>
    <label>Gift Card</label>
    <nameField>
        <label>Gift Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>