force-app/main/default/objects/Gift_Card__c/fields/Art_File__c.field-meta.xml
<CustomField>
    <fullName>Art_File__c</fullName>
    <formula>Opportunity__r.Art_File__c</formula>
    <label>Art File</label>
    <type>Text</type>
</CustomField>