force-app/main/default/objects/Gift_Card__c/fields/Back_PDF__c.field-meta.xml
<CustomField>
    <fullName>Back_PDF__c</fullName>
    <formula>Opportunity__r.Back_pdf__c</formula>
    <label>Back PDF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>