force-app/main/default/objects/Gift_Card__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>IF(
AND(Month(DATEVALUE(CreatedDate))=2,Day(DATEVALUE(CreatedDate))=29),
DATE(YEAR(DATEVALUE(CreatedDate)) + 1, Month(DATEVALUE(CreatedDate)),Day(DATEVALUE(CreatedDate))-1),
DATE(YEAR(DATEVALUE(CreatedDate)) + 1, Month(DATEVALUE(CreatedDate)),Day(DATEVALUE(CreatedDate)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>