force-app/main/default/objects/Gift_Card__c/fields/fCreated_Date__c.field-meta.xml
<CustomField>
    <fullName>fCreated_Date__c</fullName>
    <description>Provides date value only not date and time. This allows for us to capture the proper expiration date.</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fCreated Date</label>
    <type>Date</type>
</CustomField>