force-app/main/default/objects/Gift_Card__c/fields/fPerson_Account__c.field-meta.xml
<CustomField>
    <fullName>fPerson_Account__c</fullName>
    <formula>Gift_Card_Order__r.Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPerson Account</label>
    <type>Text</type>
</CustomField>