force-app/main/default/objects/Gift_Card__c/fields/Front_PDF__c.field-meta.xml
<CustomField>
    <fullName>Front_PDF__c</fullName>
    <formula>Opportunity__r.Front_pdf__c</formula>
    <label>Front PDF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>