force-app/main/default/objects/Gift_Card__c/fields/Gift_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Order__c</fullName>
    <label>Gift Card Order</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Gift Cards</relationshipLabel>
    <relationshipName>Gift_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>