force-app/main/default/objects/Gift_Card__c/fields/Gift_Card_URL__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_URL__c</fullName>
    <formula>&quot;http://activate.nucards.com/?CardNum=&quot; &amp;   SUBSTITUTE(Name,&apos; &apos;,&quot;&quot;)</formula>
    <label>Gift Card URL</label>
    <type>Text</type>
</CustomField>