force-app/main/default/objects/Gift_Card__c/fields/Opp_Account__c.field-meta.xml
<CustomField>
    <fullName>Opp_Account__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Account</label>
    <type>Text</type>
</CustomField>