force-app/main/default/objects/Gift_Card__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gift Cards</relationshipLabel>
    <relationshipName>Gift_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>