force-app/main/default/objects/Gift_Card__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <formula>Gift_Card_Order__r.Date_Ordered__c</formula>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>